# pitindex

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tests.yml  weekly-refresh.yml
data/: build_log.md  manual_events.csv  ticker_renames.csv
pitindex/: __init__.py  _api.py  _loader.py  cli.py
pitindex/data/: build_metadata.json  sp500_changes.csv  sp500_current.csv  sp500_seed.csv
scripts/: _reconcile.py  _renames.py  _seed.py  _wiki.py  build_dataset.py
tests/: test_api.py  test_cli.py  test_known_dates.py  test_pitindex_class.py
