[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pitindex"
version = "0.1.0"
description = "Point-in-time constituents of major equity indices, from free public sources."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Ariel Nacamulli" }]
keywords = ["finance", "sp500", "index", "constituents", "point-in-time", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
build = [
    "requests>=2.31",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pitindex[build]",
]

[project.urls]
Homepage = "https://github.com/arielnacamulli/pitindex"
Issues = "https://github.com/arielnacamulli/pitindex/issues"

[tool.hatch.build.targets.wheel]
packages = ["pitindex"]

[tool.hatch.build.targets.wheel.force-include]
"pitindex/data/sp500_seed.csv" = "pitindex/data/sp500_seed.csv"
"pitindex/data/sp500_changes.csv" = "pitindex/data/sp500_changes.csv"
"pitindex/data/sp500_current.csv" = "pitindex/data/sp500_current.csv"
"pitindex/data/build_metadata.json" = "pitindex/data/build_metadata.json"

[tool.hatch.build.targets.sdist]
include = [
    "pitindex/**",
    "scripts/**",
    "tests/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
