[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pitindex"
version = "0.1.0"
description = "Point-in-time constituents of major equity indices, from free public sources."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ariel Nacamulli" }]
keywords = ["finance", "sp500", "index", "constituents", "point-in-time", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0",
    "click>=8.1",
    "loguru>=0.7",
]

[project.optional-dependencies]
build = [
    "requests>=2.31",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pandas-stubs",
    "types-requests",
    "pitindex[build]",
]

[project.scripts]
pitindex = "pitindex.cli:cli"

[project.urls]
Homepage = "https://github.com/arielNacamulli/pitindex"
Repository = "https://github.com/arielNacamulli/pitindex"
Issues = "https://github.com/arielNacamulli/pitindex/issues"

[tool.hatch.build.targets.wheel]
packages = ["pitindex"]

[tool.hatch.build.targets.wheel.force-include]
"pitindex/data/sp500_seed.csv" = "pitindex/data/sp500_seed.csv"
"pitindex/data/sp500_changes.csv" = "pitindex/data/sp500_changes.csv"
"pitindex/data/sp500_current.csv" = "pitindex/data/sp500_current.csv"
"pitindex/data/build_metadata.json" = "pitindex/data/build_metadata.json"

[tool.hatch.build.targets.sdist]
include = [
    "pitindex/**",
    "scripts/**",
    "tests/**",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["pitindex"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["data", "pitindex/data"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "PL",
    "C4",
    "PT",
]
ignore = [
    "E501",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "B008",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PT011", "B017", "PLC0415"]

[tool.mypy]
python_version = "3.11"
packages = ["pitindex"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
strict_equality = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true
